Font sized fixed for visualiser on mobiles

--- a/src/stylesheets/components/_visualiser.scss
+++ b/src/stylesheets/components/_visualiser.scss
@@ -80,7 +80,7 @@
           font-family: 'Ubuntu' !important;
           font-weight: 400 !important;   
           @media screen and (max-width: $smallScreen){
-            font-size: 12px;
+            font-size: 14px;
           }
         }
       }
